--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,9 @@
 {
-    "azureFunctions.postDeployTask": "npm install (functions)",
-    "azureFunctions.projectLanguage": "TypeScript",
-    "azureFunctions.projectRuntime": "~4",
-    "debug.internalConsoleOptions": "neverOpen",
-    "azureFunctions.preDeployTask": "npm prune (functions)",
-    "azureFunctions.deploySubpath": ".",
+    "azureFunctions.showProjectWarning": false,
     "editor.codeActionsOnSave": [
         "source.organizeImports",
         "source.fixAll"
     ],
-    "editor.formatOnSave": true,
+    "typescript.tsdk": "node_modules/typescript/lib",
     "typescript.preferences.importModuleSpecifier": "relative",
-    "azureFunctions.funcCliPath": "./node_modules/.bin/func"
 }
