--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "func-node-decorators-prototype",
-  "version": "1.0.0",
-  "description": "Prototype for Azure Functions decorators programming model for Node.js",
-  "main": "dist/src/index.js",
+  "name": "azure-functions-decorators-typescript",
+  "version": "1.0.0-alpha.1",
+  "description": "Framework for Azure Functions Typescript Decorators",
+  "keywords": ["azure", "azure-functions", "decorators", "typescript", "serverless"],
+  "main": "dist/azure-functions-decorators-typescript.js",
+  "types": "types/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "prestart": "npm run build",
-    "start": "func start",
-    "test": "mocha 'dist/test/**/*.test.js'"
+    "build": "webpack --mode development",
+    "minify": "webpack --mode production",
+    "lint": "eslint . --fix",
+    "watch": "webpack --watch --mode development",
+    "test": "ts-node ./test/index.ts"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hossam-nasr/func-node-decorators-prototype.git"
+    "url": "git+https://github.com/hossam-nasr/azfunc-nodejs-decorators-typescript.git"
   },
   "author": "Hossam Nasr",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hossam-nasr/func-node-decorators-prototype/issues"
+    "url": "https://github.com/hossam-nasr/azfunc-nodejs-decorators-typescript/issues"
   },
-  "homepage": "https://github.com/hossam-nasr/func-node-decorators-prototype#readme",
+  "homepage": "https://github.com/hossam-nasr/azfunc-nodejs-decorators-typescript#readme",
+  "files": [
+    "dist/",
+    "src/",
+    "types/",
+    "README.md"
+  ],
+  "engines": {
+    "node": ">=18.0"
+  },
   "dependencies": {
     "@azure/functions": "C:\\Users\\hossamnasr\\ms\\azure\\nodejs-worker\\library"
   },
@@ -28,14 +39,22 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "chai": "^4.3.6",
-    "eslint": "^8.26.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-deprecation": "^1.3.2",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "func-cli-nodejs-v4": "^4.0.4764",
     "mocha": "^10.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "ts-node": "^3.3.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "ts-loader": "^9.3.1",
+    "prettier": "^2.4.1"
   }
 }
